--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_margin="35dp"
-        android:gravity="center"
-        android:padding="20dp"
-        tools:context=".view.ui.fragment.LoginFragment">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:gravity="center"
+              android:background="@drawable/quadradoscrum"
+              tools:context=".view.ui.fragment.LoginFragment">
+
+    <LinearLayout
+            android:background="@drawable/shape_login"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="35dp"
+            android:gravity="center"
+            android:padding="20dp">
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Iniciar sesion"
                 android:textSize="22sp"/>
-
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/email_wrapper"
@@ -24,7 +31,6 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
                 app:counterEnabled="true"
                 app:counterMaxLength="100"
                 app:counterOverflowTextAppearance="@style/error_appearance_red"
@@ -50,7 +56,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginBottom="10dp"
                 app:counterEnabled="true"
                 app:counterMaxLength="100"
                 app:counterOverflowTextAppearance="@style/error_appearance_red"
@@ -88,8 +93,8 @@
                 android:id="@+id/facebookFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp">
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp">
 
             <com.facebook.login.widget.LoginButton
                     android:id="@+id/loginButton"
@@ -104,8 +109,7 @@
                     android:textAlignment="center"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:text="INGRESA CON FACEBOOK"
-            />
+                    android:text="INGRESA CON FACEBOOK"/>
 
         </FrameLayout>
 
@@ -113,8 +117,8 @@
                 android:id="@+id/gmailFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp">
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp">
 
             <com.google.android.gms.common.SignInButton
                     android:id="@+id/google_button"
@@ -142,7 +146,7 @@
 
         <LinearLayout
                 android:id="@+id/newUser"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="4dp"
                 android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -162,6 +166,7 @@
 
         </LinearLayout>
 
+
         <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/login_test"
                 android:text="test"
@@ -169,5 +174,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
