--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="170dp"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="10dp"
-    app:cardCornerRadius="2dp"
-    android:orientation="vertical"
-    app:cardBackgroundColor="@color/colorWhite">
+<androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="2dp"
+        android:orientation="vertical"
+        app:cardBackgroundColor="@color/colorWhite">
 
     <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@null"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"/>
 
     <View
             android:layout_width="match_parent"
@@ -40,7 +41,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
                 android:layout_gravity="center"
-                android:textSize="20sp" />
+                android:textSize="20sp"/>
 
         <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/more_info"
@@ -68,17 +69,20 @@
                 android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/happy_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="4dp"
                     android:backgroundTint="@android:color/transparent"
-                    android:tint="@color/md_red_700"
-                    android:src="@drawable/sad"/>
+                    android:tint="@color/md_green_700"
+                    android:src="@drawable/happy"/>
 
             <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/sad_number"
+                    android:id="@+id/happy_number"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"/>
+
 
             <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/neutral_button"
@@ -92,21 +96,23 @@
             <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/neutral_number"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"/>
 
             <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/happy_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="4dp"
                     android:backgroundTint="@android:color/transparent"
-                    android:tint="@color/md_green_700"
-                    android:src="@drawable/happy"/>
+                    android:tint="@color/md_red_700"
+                    android:src="@drawable/sad"/>
 
             <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/happy_number"
+                    android:id="@+id/sad_number"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"/>
+
 
         </LinearLayout>
 
