--- a/app/src/main/res/layout/activity_dertail_product.xml
+++ b/app/src/main/res/layout/activity_dertail_product.xml
@@ -25,14 +25,14 @@
                     android:layout_height="230dp"
                     android:contentDescription="@null"
                     android:scaleType="centerCrop"
-                    app:layout_collapseMode="parallax" />
+                    app:layout_collapseMode="parallax"/>
 
             <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:titleTextColor="@color/colorWhite"
-                    app:layout_collapseMode="pin" />
+                    app:layout_collapseMode="pin"/>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -64,73 +64,97 @@
                         android:maxLines="1"
                         android:ellipsize="end"
                         android:textAllCaps="false"
-                        android:textColor="@color/colorWhite"
+                        android:textColor="@color/black"
                         android:layout_gravity="center"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"/>
 
                 <com.example.scrumproyect.view.ui.utils.JustifyTextView
                         android:id="@+id/description_detail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
-                        android:textSize="15sp" />
+                        android:textSize="15sp"/>
                 <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="@color/colorPrimaryDark"/>
 
                 <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginEnd="24dp"
-                        android:paddingStart="8dp"
-                        android:paddingEnd="8dp"
-                        android:background="@drawable/shape_likes"
                         android:gravity="center"
                         android:orientation="horizontal">
 
-                    <androidx.appcompat.widget.AppCompatImageButton
-                            android:id="@+id/sad_button"
-                            android:layout_width="wrap_content"
+                    <LinearLayout
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:padding="6dp"
-                            android:backgroundTint="@android:color/transparent"
-                            android:tint="@color/md_red_700"
-                            android:src="@drawable/sad"/>
+                            android:orientation="horizontal"
+                            android:gravity="center">
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/sad_number"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                        <androidx.appcompat.widget.AppCompatImageButton
+                                android:id="@+id/happy_button"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:backgroundTint="@android:color/transparent"
+                                android:tint="@color/md_green_700"
+                                android:src="@drawable/happy"/>
 
-                    <androidx.appcompat.widget.AppCompatImageButton
-                            android:id="@+id/neutral_button"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="6dp"
-                            android:backgroundTint="@android:color/transparent"
-                            android:tint="@color/md_yellow_700"
-                            android:src="@drawable/neutral"/>
+                        <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/happy_number"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/neutral_number"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
 
-                    <androidx.appcompat.widget.AppCompatImageButton
-                            android:id="@+id/happy_button"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="6dp"
-                            android:backgroundTint="@android:color/transparent"
-                            android:tint="@color/md_green_700"
-                            android:src="@drawable/happy"/>
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/happy_number"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                    <LinearLayout
+                            android:gravity="center"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content">
+
+                        <androidx.appcompat.widget.AppCompatImageButton
+                                android:id="@+id/neutral_button"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="6dp"
+                                android:backgroundTint="@android:color/transparent"
+                                android:tint="@color/md_yellow_700"
+                                android:src="@drawable/neutral"/>
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/neutral_number"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                            android:gravity="center"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content">
+
+                        <androidx.appcompat.widget.AppCompatImageButton
+                                android:id="@+id/sad_button"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="6dp"
+                                android:backgroundTint="@android:color/transparent"
+                                android:tint="@color/md_red_700"
+                                android:src="@drawable/sad"/>
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/sad_number"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
 
                 </LinearLayout>
 
@@ -166,7 +190,7 @@
                         android:maxLines="3"
                         android:minHeight="?attr/actionBarSize"
                         android:paddingBottom="4dp"
-                        android:paddingTop="4dp" />
+                        android:paddingTop="4dp"/>
 
                 <ImageButton
                         android:id="@+id/send"
@@ -176,7 +200,7 @@
                         android:contentDescription="@null"
                         android:foreground="?attr/selectableItemBackground"
                         android:src="@drawable/ic_send_white_24dp"
-                        android:tint="@color/colorPrimaryDark" />
+                        android:tint="@color/colorPrimaryDark"/>
 
             </LinearLayout>
 
@@ -189,7 +213,7 @@
                     android:layout_gravity="center"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:spanCount="1"
-                    tools:listitem="@layout/item_comment" />
+                    tools:listitem="@layout/item_comment"/>
 
         </LinearLayout>
 
