--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,6 @@
         tools:context=".view.ui.activity.MainActivity">
 
     <androidx.drawerlayout.widget.DrawerLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/drawer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -33,7 +30,27 @@
                 app:itemIconTint="@color/colorPrimaryDark"
                 app:itemTextColor="@color/colorPrimaryDark"
                 app:headerLayout="@layout/nav_header_main2"
-                app:menu="@menu/activity_main_drawer"/>
+                app:menu="@menu/activity_main_drawer">
+
+            <Button
+                android:id="@+id/nav_close"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawablePadding="28dp"
+                android:drawableStart="@drawable/ic_input_black_24dp"
+                android:drawableTint="@color/colorPrimaryDark"
+                android:gravity="center_vertical"
+                android:paddingEnd="16dp"
+                android:paddingStart="16dp"
+                android:text="@string/menu_close_session"
+                android:textAllCaps="false"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="14sp"
+                android:textStyle="bold"/>
+
+        </com.google.android.material.navigation.NavigationView>
 
     </androidx.drawerlayout.widget.DrawerLayout>
 
