--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -18,10 +18,11 @@
     <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profileImageMain"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
             app:civ_border_width="2dp"
-            app:civ_border_color="#FF000000"/>
+            android:src="@drawable/logoscrum"
+            app:civ_border_color="@color/white"/>
 
 
     <TextView
