--- a/app/src/main/res/menu/menu_share.xml
+++ b/app/src/main/res/menu/menu_share.xml
@@ -9,4 +9,10 @@
             android:icon="@drawable/ic_share_white_24dp"
             app:showAsAction="always" />
 
+    <item
+            android:title=""
+            android:id="@+id/i_delete"
+            android:icon="@drawable/ic_delete_white_24dp"
+            app:showAsAction="always" />
+
 </menu>
