--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
 
     <color name="gray_4">#909094</color>
 
+    <color name="transparent_gray">#6f212121</color>
+
     <color name="white">#FFF</color>
     <color name="whiteTransparent">#20FFFFFF</color>
     <color name="grey_edit">#c5c5c5</color>
